# mac-mini-research

./: .gitignore  README.md  pyproject.toml
.github/workflows/: apple-watch.yml  daily.yml
data/: latest.json  news.json
data/snapshots/: 2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-18.json
site/: data.json  index.html
src/tracker/: analyze.py  cli.py  config.py  models.py  news.py  notify.py  render.py  storage.py  watch.py
src/tracker/scrapers/: apple_refurb.py  iosys.py
tests/: test_analyze.py  test_apple_refurb.py  test_iosys.py  test_watch.py
