[project]
name = "mac-mini-tracker"
version = "0.1.0"
description = "Daily price tracker for M4 Mac mini (24GB / 32GB), new and used"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tracker = "tracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracker"]
